# swespot

./: .gitignore  LICENSE  README.md  pyproject.toml
eval/: fea.sh  fea_host.yaml  get_all_images.py  qa.py  qa.sh  qa_host.yaml  sbv.sh  sbv_host.yaml  tdd.sh  tdd_host.yaml
eval/data/fea/: astropy.jsonl  django.jsonl  matplotlib.jsonl  pylint.jsonl  sphinx.jsonl  sympy.jsonl  xarray.jsonl
eval/data/qa/: astropy.jsonl  django.jsonl  matplotlib.jsonl  pylint.jsonl  sphinx.jsonl  sympy.jsonl  xarray.jsonl
eval/data/qa/reference/: astropy.jsonl  matplotlib.jsonl
eval/data/sbv/: astropy.jsonl  django.jsonl  matplotlib.jsonl  pylint.jsonl  sphinx.jsonl  sympy.jsonl  xarray.jsonl
eval/data/tdd/: astropy.jsonl  django.jsonl  matplotlib.jsonl  pylint.jsonl  sphinx.jsonl  sympy.jsonl  xarray.jsonl
scripts/: eval_bugfix.sh
train/: mix_django.sh
